chore: added .env back to .gitignore in case we need it

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,10 @@ coverage/
 # package-lock.json
 # yarn.lock
 # pnpm-lock.yaml
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
