fix(ci): replace broken Docker action with direct Allure CLI installation
- Remove simple-elf/allure-report-action (outdated Docker base image)
- Install Allure CLI directly from GitHub releases (v2.25.0)
- Set up Java 17 for Allure CLI execution
- Use stable installation method that doesn't depend on Docker images

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,14 +57,26 @@ jobs:
           name: allure-results-xml
           path: ./allure-results
 
+      - name: Set up Java for Allure CLI
+        if: always()
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Install Allure CLI
+        if: always()
+        run: |
+          curl -o allure-commandline.zip -Ls https://github.com/allure-framework/allure2/releases/download/2.25.0/allure-2.25.0.zip
+          unzip -q allure-commandline.zip
+          sudo mv allure-2.25.0 /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/local/bin/allure
+          allure --version
+
       - name: Generate Allure HTML report
         if: always()
-        uses: simple-elf/allure-report-action@v1.7
-        with:
-          allure_results: ./allure-results
-          allure_report: ./allure-report
-          gh_pages: false
-          allure_history: allure-history
+        run: |
+          allure generate ./allure-results -o ./allure-report --clean
 
       - name: Upload Allure HTML artifact
         if: always()
