--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,13 +64,25 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install Allure CLI
+      - name: Cache Allure CLI
         if: always()
+        uses: actions/cache@v4
+        id: allure-cache
+        with:
+          path: /opt/allure
+          key: allure-2.25.0
+
+      - name: Install Allure CLI
+        if: always() && steps.allure-cache.outputs.cache-hit != 'true'
         run: |
           curl -o allure-commandline.zip -Ls https://github.com/allure-framework/allure2/releases/download/2.25.0/allure-2.25.0.zip
           unzip -q allure-commandline.zip
           sudo mv allure-2.25.0 /opt/allure
-          sudo ln -s /opt/allure/bin/allure /usr/local/bin/allure
+
+      - name: Setup Allure CLI PATH
+        if: always()
+        run: |
+          sudo ln -sf /opt/allure/bin/allure /usr/local/bin/allure
           allure --version
 
       - name: Generate Allure HTML report
