fix(ci): correct workflow triggers and deployment conditions
- Add feature branch to push triggers for testing
- Change deployment conditions from branch refs to event_name == 'push'
- Fix unreachable conditions caused by PR refs vs branch refs
- Enable proper testing on feature branch pushes
- Simplify conditional logic to use event type instead of branch matching

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI Pipeline
 # Trigger on push and PRs (adjust as needed)
 on:
   push:
-    branches: [ main ]
+    branches: [ main, feat/deploy-allure-report-on-github ]
   pull_request:
     branches: [ main ]
 
@@ -98,7 +98,7 @@ jobs:
           allure generate ./allure-results -o ./allure-report --clean
 
       - name: Create Reports Index
-        if: always() && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feat/deploy-allure-report-on-github')
+        if: always() && github.event_name == 'push'
         run: |
           mkdir -p ./allure-report-with-index
           cp -r ./allure-report ./allure-report-with-index/allure-reports/${{ github.run_number }}
@@ -150,7 +150,7 @@ jobs:
           path: ./allure-report
 
       - name: Deploy Allure Report to GitHub Pages
-        if: always() && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feat/deploy-allure-report-on-github')
+        if: always() && github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -158,7 +158,7 @@ jobs:
           keep_files: true
 
       - name: Output Allure Report URL
-        if: always() && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feat/deploy-allure-report-on-github')
+        if: always() && github.event_name == 'push'
         run: |
           echo "## 📊 Allure Report Published" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
