--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Setup environment file
+        run: cp .env.example .env
+
       - name: Run E2E tests and generate Allure results
         run: |
           npx playwright install --with-deps
@@ -53,7 +56,7 @@ jobs:
           echo "Running E2E tests with Allure reporter..."
           # Run tests with multiple reporters including Allure
           # Store exit code but don't exit early to ensure Allure results are processed
-          npx playwright test --reporter=list,allure-playwright
+          npx playwright test tests/ --reporter=list,allure-playwright
           TEST_EXIT_CODE=$?
           echo "Test execution completed with exit code: $TEST_EXIT_CODE"
           # Verify results were generated
