--- a/package.json
+++ b/package.json
@@ -55,38 +55,42 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/supertest": "^6.0.2",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.5",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@playwright/test": "^1.48.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^24.10.1",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.2",
+    "asynckit": "^0.4.0",
+    "content-disposition": "^1.0.1",
     "dotenv": "^17.2.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-playwright": "^2.3.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "form-data": "^4.0.5",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-allure2-reporter": "^2.2.8",
     "lint-staged": "^16.2.6",
     "nodemon": "^3.0.2",
     "playwright": "^1.48.0",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
