--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,10 +53,11 @@ jobs:
           npx playwright --version
           echo "Playwright config check:"
           cat playwright.config.ts | grep -A 5 -B 5 "reporter" || echo "Could not find reporter config"
-          echo "Running E2E tests with Allure reporter..."
-          # Run tests with multiple reporters including Allure
+          echo "Running E2E tests with Allure reporter (excluding accessibility tests)..."
+          # Run only E2E tests with multiple reporters including Allure
+          # Exclude accessibility tests which have their own dedicated job
           # Store exit code but don't exit early to ensure Allure results are processed
-          npx playwright test tests/ --reporter=list,allure-playwright
+          npx playwright test tests/crypto-navigation.spec.ts --reporter=list,allure-playwright
           TEST_EXIT_CODE=$?
           echo "Test execution completed with exit code: $TEST_EXIT_CODE"
           # Verify results were generated
