--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ permissions:
 
 jobs:
   e2e-docker-tests:
-    name: E2E Tests via Docker
+    name: E2E Tests via Docker (CI)
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -89,11 +89,4 @@ jobs:
             allure-report/
           retention-days: 7
 
-      - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main'
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-report
-          keep_files: false
+
