--- a/.github/workflows/deploy-combined.yml
+++ b/.github/workflows/deploy-combined.yml
@@ -87,17 +87,7 @@ jobs:
             echo "⚠️ WCAG tests failed, but continuing deployment..."
             echo "Creating placeholder accessibility report..."
             mkdir -p accessibility-report
-            cat > accessibility-report/index.html << 'EOF'
-          <!DOCTYPE html>
-          <html>
-          <head><title>WCAG Tests Failed</title></head>
-          <body>
-            <h1>⚠️ WCAG Accessibility Tests Failed</h1>
-            <p>The accessibility tests encountered errors during execution.</p>
-            <p>Please check the workflow logs for details and run tests locally to investigate.</p>
-          </body>
-          </html>
-          EOF
+            cp .github/templates/wcag-failed.html accessibility-report/index.html
             exit 0
           }
         env:
@@ -108,119 +98,8 @@ jobs:
       - name: Create combined reports structure
         run: |
           echo "📁 Creating combined reports structure..."
-
-          # Create main index page
-          cat > combined-reports/index.html << 'EOF'
-          <!DOCTYPE html>
-          <html lang="en">
-          <head>
-              <meta charset="UTF-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <title>Playwright Test Reports - crypto.com Exchange</title>
-              <style>
-                  * { margin: 0; padding: 0; box-sizing: border-box; }
-                  body { 
-                      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-                      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                      min-height: 100vh;
-                      padding: 2rem;
-                  }
-                  .container { max-width: 1200px; margin: 0 auto; }
-                  .header { text-align: center; margin-bottom: 3rem; color: white; }
-                  .header h1 { font-size: 3rem; margin-bottom: 1rem; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); }
-                  .header p { font-size: 1.2rem; opacity: 0.9; }
-                  .reports-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem; }
-                  .report-card { 
-                      background: white; 
-                      border-radius: 15px; 
-                      padding: 2rem; 
-                      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-                      transition: transform 0.3s ease, box-shadow 0.3s ease;
-                  }
-                  .report-card:hover { 
-                      transform: translateY(-5px); 
-                      box-shadow: 0 15px 40px rgba(0,0,0,0.3);
-                  }
-                  .report-icon { font-size: 3rem; margin-bottom: 1rem; }
-                  .report-title { font-size: 1.5rem; margin-bottom: 1rem; color: #333; }
-                  .report-description { color: #666; margin-bottom: 2rem; line-height: 1.6; }
-                  .report-button { 
-                      display: inline-block;
-                      background: linear-gradient(45deg, #667eea, #764ba2);
-                      color: white;
-                      padding: 12px 24px;
-                      text-decoration: none;
-                      border-radius: 8px;
-                      font-weight: 600;
-                      transition: all 0.3s ease;
-                  }
-                  .report-button:hover { 
-                      background: linear-gradient(45deg, #764ba2, #667eea);
-                      transform: scale(1.05);
-                  }
-                  .meta-info {
-                      background: rgba(255,255,255,0.1);
-                      padding: 1rem;
-                      border-radius: 10px;
-                      margin-top: 2rem;
-                      color: white;
-                      text-align: center;
-                  }
-                  .badge { 
-                      display: inline-block; 
-                      background: rgba(255,255,255,0.2); 
-                      padding: 4px 12px; 
-                      border-radius: 20px; 
-                      font-size: 0.9rem; 
-                      margin: 0 5px;
-                  }
-              </style>
-          </head>
-          <body>
-              <div class="container">
-                  <div class="header">
-                      <h1>🎭 Playwright Test Reports</h1>
-                      <p>Comprehensive testing results for crypto.com Exchange platform</p>
-                  </div>
-                  
-                  <div class="reports-grid">
-                      <div class="report-card">
-                          <div class="report-icon">📊</div>
-                          <h2 class="report-title">Allure Test Report</h2>
-                          <p class="report-description">
-                              Comprehensive E2E test results with detailed execution history, 
-                              trends, and interactive test case breakdowns. Includes screenshots, 
-                              videos, and step-by-step test execution details.
-                          </p>
-                          <a href="./allure/" class="report-button">View Allure Report →</a>
-                      </div>
-                      
-                      <div class="report-card">
-                          <div class="report-icon">♿</div>
-                          <h2 class="report-title">WCAG Accessibility Report</h2>
-                          <p class="report-description">
-                              WCAG 2.1 AA/AAA compliance testing results with detailed accessibility 
-                              violations, recommendations, and visual evidence of issues found 
-                              during automated accessibility scanning.
-                          </p>
-                          <a href="./wcag/" class="report-button">View WCAG Report →</a>
-                      </div>
-                  </div>
-                  
-                  <div class="meta-info">
-                      <p><strong>Generated:</strong> <span id="timestamp"></span></p>
-                      <p><strong>Environment:</strong> <span class="badge">ENVIRONMENT_PLACEHOLDER</span></p>
-                      <p><strong>Commit:</strong> <span class="badge">COMMIT_PLACEHOLDER</span></p>
-                      <p><strong>Workflow:</strong> <span class="badge">WORKFLOW_PLACEHOLDER</span></p>
-                  </div>
-              </div>
-              
-              <script>
-                  document.getElementById('timestamp').textContent = new Date().toLocaleString();
-              </script>
-          </body>
-          </html>
-          EOF
+          # Copy main index template
+          cp .github/templates/main-index.html combined-reports/index.html
 
       - name: Copy reports to combined structure
         run: |
@@ -236,14 +115,67 @@ jobs:
             echo "<h1>Allure Report Not Available</h1><p>E2E tests may have failed or not generated reports.</p>" > combined-reports/allure/index.html
           fi
 
-          # Copy WCAG report
+          # Copy WCAG report and create enhanced index with PNG gallery
           if [ -d "accessibility-report" ] && [ -f "accessibility-report/index.html" ]; then
             cp -r accessibility-report combined-reports/wcag
             echo "✅ WCAG report copied"
+            
+            # Move original report to data subdirectory and use enhanced gallery as main page
+            echo "📸 Creating enhanced WCAG report with PNG gallery..."
+            mkdir -p combined-reports/wcag/data
+            mv combined-reports/wcag/index.html combined-reports/wcag/data/
+            cp .github/templates/wcag-gallery.html combined-reports/wcag/index.html
+            
+            # Generate screenshots manifest for the gallery
+            echo "📋 Generating screenshots manifest..."
+            echo "{" > combined-reports/wcag/screenshots-manifest.json
+            echo '  "generated": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'",' >> combined-reports/wcag/screenshots-manifest.json
+            echo '  "screenshots": [' >> combined-reports/wcag/screenshots-manifest.json
+            
+            # Find all PNG files in accessibility-report and test-results
+            SCREENSHOT_FILES=""
+            for dir in accessibility-report test-results; do
+              if [ -d "$dir" ]; then
+                for png_file in $(find "$dir" -name "*.png" -type f 2>/dev/null); do
+                  # Preserve directory structure to avoid filename collisions
+                  # Instead of stripping first directory, use full relative path with source prefix
+                  source_prefix=$(basename "$dir")
+                  relative_path_in_source=$(echo "$png_file" | sed "s|^$dir/||")
+                  final_path="$source_prefix/$relative_path_in_source"
+                  
+                  # Create parent directories before copying
+                  target_dir="combined-reports/wcag/$(dirname "$final_path")"
+                  mkdir -p "$target_dir"
+                  
+                  # Copy PNG to wcag directory with preserved structure
+                  if cp "$png_file" "combined-reports/wcag/$final_path" 2>/dev/null; then
+                    echo "✅ Copied: $png_file -> $final_path"
+                    if [ -n "$SCREENSHOT_FILES" ]; then
+                      SCREENSHOT_FILES="$SCREENSHOT_FILES,"
+                    fi
+                    SCREENSHOT_FILES="$SCREENSHOT_FILES    \"./$final_path\""
+                  else
+                    echo "❌ Failed to copy: $png_file"
+                  fi
+                done
+              fi
+            done
+            
+            echo "$SCREENSHOT_FILES" >> combined-reports/wcag/screenshots-manifest.json
+            echo '  ]' >> combined-reports/wcag/screenshots-manifest.json
+            echo '}' >> combined-reports/wcag/screenshots-manifest.json
+            
+            # Show manifest content for debugging
+            echo "📋 Screenshots manifest generated:"
+            cat combined-reports/wcag/screenshots-manifest.json
+            
           else
             echo "⚠️ WCAG report not found, creating placeholder"
             mkdir -p combined-reports/wcag
-            echo "<h1>WCAG Report Not Available</h1><p>Accessibility tests may have failed or not generated reports.</p>" > combined-reports/wcag/index.html
+            cp .github/templates/wcag-failed.html combined-reports/wcag/index.html
+            
+            # Create empty manifest for failed tests
+            echo '{"generated": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'", "screenshots": []}' > combined-reports/wcag/screenshots-manifest.json
           fi
 
       - name: Update main page with metadata
